# Professional-C---Project

./: CMakeLists.txt  README.md
docs/core/: Config.md  Logger.md  README.md
include/core/: App.hpp  Config.hpp  Logger.hpp
src/: main.cpp
